--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -62,6 +62,8 @@
         padding-bottom: 12%;
         /*padding: 12% 6%;*/
         z-index: 10;
+	max-height: 300px;
+	overflow-y: auto;
 }
 .popover h2 {
         font-size: 16px;
