--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -5,10 +5,10 @@
         <title>
             AirBnB Clone
         </title>
-        <link rel="stylesheet" href="styles/4-common.css">
-        <link rel="stylesheet" href="styles/3-header.css">
-        <link rel="stylesheet" href="styles/3-footer.css">
-        <link rel="stylesheet" href="styles/6-filters.css">
+        <link rel="stylesheet" href="../static/styles/4-common.css">
+        <link rel="stylesheet" href="../static/styles/3-header.css">
+        <link rel="stylesheet" href="../static/styles/3-footer.css">
+        <link rel="stylesheet" href="../static/styles/6-filters.css">
     </head>
     <body>
         <header>
@@ -17,34 +17,27 @@
             <section class="filters">
                 <div class="locations">
                     <h3>States</h3>
-                    <h4>
-                        California, Arizona...
-                    </h4>
+                    <h4>&nbsp;</h4>
                     <ul class="popover">
-                        <li>
-                            <h2>Arizona</h2>
-                            <ul>
-                                <li>Page</li>
-                                <li>Page2</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <h2>California</h2>
-                            <ul>
-                               <li>San Francisco</li>
-                                <li>Los Altos</li>
-                            </ul>
-                        </li>
+                        {% for state in states_n_cities.keys() %}
+                            <li>
+                                <h2>{{ state.name }}</h2>
+                                <ul>
+                                    {% for city in states_n_cities[state] %}
+                                        <li>city.name</li>
+                                    {% endfor %}
+                                </ul>
+                            </li>
+                        {% endfor %}
                     </ul>
                 </div>
                 <div class="amenities">
                     <h3>Amenities</h3>
-                    <h4>Internet, Kitchen...</h4>
+                    <h4>&nbsp;</h4>
                     <ul class="popover">
-                        <li>Internet</li>
-                        <li>TV</li>
-                        <li>Kitchen</li>
-                        <li>Iron<li>
+                        {% for amenity_name in amenity_names %}
+                            <li>{{ amenity_name }}</li>
+                        {% endfor %}
                     </ul>
                 </div>
                 <button>
