Correctly display the cities of each state

--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -24,7 +24,7 @@
                                 <h2>{{ state.name }}</h2>
                                 <ul>
                                     {% for city in states_n_cities[state] %}
-                                        <li>city.name</li>
+                                    <li>{{ city.name }}</li>
                                     {% endfor %}
                                 </ul>
                             </li>
